# abstraction-recovery

./: .gitignore  demo.py  draw_animation.py  grid.ipynb  pose_slam.ipynb  requirements.txt  synthetic_se2_mg_svd_results.json  test.ipynb
cpp/: .gitignore  CMakeLists - 副本.txt  CMakeLists.txt  FactorGraph.i  SLAM_TEST_CONVERSION.md  compile_and_run.bat  compile_and_run_test_hierarchy_gbp_env.bat  compile_slam_graph.bat  compile_test_gbp.bat  patch_factor_cache_JO.diff  run_large_scale_test.bat  test_matmul.cpp  vcpkg-configuration.json  vcpkg.json
cpp/build-release/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  NdimGaussian.sln  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  ndim_gaussian.vcxproj  ndim_gaussian.vcxproj.filters  slam_graph.vcxproj  slam_graph.vcxproj.filters  test_anchor_factor.vcxproj  test_anchor_factor.vcxproj.filters  test_gaussian.vcxproj  test_gaussian.vcxproj.filters  test_gbp.vcxproj  test_gbp.vcxproj.filters  test_hierarchy_gbp.vcxproj  test_hierarchy_gbp.vcxproj.filters  test_large_scale_slam.vcxproj  test_large_scale_slam.vcxproj.filters  test_slam_graph.vcxproj  test_slam_graph.vcxproj.filters  test_small_slam.vcxproj  test_small_slam.vcxproj.filters
cpp/build-release/Release/: ndim_gaussian.lib  slam_graph.lib
cpp/build-release/test_gaussian.dir/Release/: test_gaussian.exe.recipe
cpp/build-release/test_hierarchy_gbp.dir/Release/: test_hierarchy_gbp.exe.recipe
cpp/build-release/test_large_scale_slam.dir/Release/: test_large_scale_slam.exe.recipe
cpp/include/: NdimGaussian.h
cpp/include/gbp/: Factor.h  FactorGraph.h  HierarchyGBP.h  VariableNode.h
cpp/include/slam/: SlamFactorGraph.h  SlamGraph.h  SyntheticSE2MG.h
cpp/scripts/: build_cpp.ps1  run_vtune.ps1
cpp/src/: NdimGaussian.cpp  test_gaussian.cpp  test_gbp.cpp
cpp/src/gbp/: Factor.cpp  FactorGraph.cpp  HierarchyGBP.cpp  VariableNode.cpp
cpp/src/slam/: SlamFactorGraph.cpp  SlamGraph.cpp  SyntheticSE2MG.cpp  test_anchor_factor.cpp  test_hierarchy_gbp.cpp  test_hierarchy_gbp_nonlinear.cpp  test_large_scale_slam.cpp  test_slam_graph.cpp  test_small_slam.cpp  test_synthetic_se2_mg_svd.cpp
cpp/tmp/: bench_threads_12_0.json  bench_threads_1_2.json  bench_threads_4_2.json  cache3_fast12_0.json  cache3_fast12_1.json  cache3_fast12_2.json  cache3_fast12_3.json  cache3_strict_0.json  cache3_strict_1.json  cache3_strict_2.json  cache3_strict_3.json  current_speed_12_0.json  current_speed_12_1.json  current_speed_12_2.json  current_speed_1_0.json  current_speed_1_1.json  current_speed_1_2.json  current_speed_4_0.json  current_speed_4_1.json  current_speed_4_2.json  muopt_fast_12_0.json  muopt_fast_12_1.json  muopt_fast_12_2.json  muopt_fast_12_3.json  muopt_fast_1_0.json  muopt_fast_1_1.json  muopt_fast_1_2.json  muopt_fast_1_3.json  muopt_fast_4_0.json  muopt_fast_4_1.json  muopt_fast_4_2.json  muopt_fast_4_3.json  muopt_strict_0.json  muopt_strict_1.json  muopt_strict_2.json  muopt_strict_3.json  opt_fast_12_0.json  opt_fast_12_1.json  opt_fast_12_2.json  opt_fast_1_0.json  (+92 more)
cpp/tmp/vtune_hotspots_admin/: hotspots.txt  precheck.txt  summary.txt  vtune_hotspots_admin.vtune
cpp/tmp/vtune_hotspots_admin/config/: collection.cfg  context_values.cfg  log.cfg  runss.options
cpp/tmp/vtune_hotspots_admin/data.0/: 33348-30392.0-35516.0.th  33348-30392.0-35516.0.th.aux  33348-30392.0.trace  emon.0.emon  emon.0.emon_cpu  systemcollector-36504-CHENG.sc
cpp/tmp/vtune_hotspots_admin/sqlite-db/: dicer.db
cpp/tmp/vtune_hotspots_admin_recheck/: hotspots.txt  precheck.txt  summary.txt  vtune_hotspots_admin_recheck.vtune
cpp/tmp/vtune_hotspots_admin_recheck/config/: collection.cfg  context_values.cfg  log.cfg  runss.options
cpp/tmp/vtune_hotspots_admin_recheck/data.0/: 36168-4140.0-31476.0.th  36168-4140.0-31476.0.th.aux  36168-4140.0.trace  emon.0.emon  emon.0.emon_events  emon.0.emon_version  sep.events  systemcollector-10052-CHENG.sc
cpp/tmp/vtune_hotspots_admin_recheck/sqlite-db/: dicer.db
cpp/tmp/vtune_hotspots_script_check/: hotspots.txt  precheck.txt  summary.txt  vtune_hotspots_script_check.vtune
cpp/tmp/vtune_hotspots_script_check/config/: collection.cfg  context_values.cfg  log.cfg  runss.options
cpp/tmp/vtune_hotspots_script_check/data.0/: 27612-30392.0-36216.0.th  27612-30392.0-36216.0.th.aux  27612-30392.0.trace  systemcollector-26260-CHENG.sc
cpp/tmp/vtune_hotspots_script_check/sqlite-db/: dicer.db
cpp/tmp/vtune_hotspots_script_regression/: collection.txt  hotspots.txt  precheck.txt  summary.txt  vtune_hotspots_script_regression.vtune
cpp/tmp/vtune_hotspots_script_regression/config/: collection.cfg  context_values.cfg  log.cfg  runss.options
cpp/tmp/vtune_hotspots_script_regression/data.0/: 19824-25432.0-25540.0.th  19824-25432.0-25540.0.th.aux  19824-25432.0.trace  systemcollector-31800-CHENG.sc
cpp/tmp/vtune_hotspots_script_regression/sqlite-db/: dicer.db
cpp/tmp/vtune_hotspots_synth512/: vtune_hotspots_synth512.vtune
cpp/tmp/vtune_hotspots_synth512/config/: collection.cfg  context_values.cfg  log.cfg  runss.options
cpp/tmp/vtune_hotspots_synth512/data.0/: 2036-4420.0-4252.0.th  2036-4420.0-4252.0.th.aux  2036-4420.0.trace  systemcollector-32024-CHENG.sc
cpp/tmp/vtune_hotspots_synth512/sqlite-db/: dicer.db
cpp/tmp/vtune_memory_admin_probe-bad/: 33656.dataLim  vtune_memory_admin_probe-bad.vtune
cpp/tmp/vtune_memory_admin_probe-bad/config/: analysis_type.cfg  collection.cfg  context_values.cfg  runsa.options
cpp/tmp/vtune_memory_admin_probe-bad/data.0/: systemcollector-33656-CHENG.sc
cpp/tmp/vtune_uarch_admin_probe/: vtune_uarch_admin_probe.vtune
cpp/tmp/vtune_uarch_admin_probe/config/: analysis_type.cfg  collection.cfg  context_values.cfg  log.cfg  runsa.options
cpp_SE2/: CMakeLists.txt
cpp_SE2/include/gbp/: .clang-format  batch_solver.h  between.h  factor.h  factor_graph.h  factor_type.h  key.h  loss.h  maths.h  message.h  multi_factor_graph.h  opt_options.h  optimizer.h  prior.h  random_generator.h  range_bearing.h  variable.h
cpp_SE2/include/gbp/factors/: between_SE2.h  (+2 more)
cpp_SE2/src/: test.cpp
(+814 files in other folders)
